--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
   <title>Сложная шапка сайта</title>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/main-header.css">
 </head>
 
