Базовая css-стилизация

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <span></span>
             </button>
 
-            <a href="">
+            <a class="main-header__search button-search" href="#">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 16" width="16" height="16">
                 <circle cx="7" cy="7" r="6" stroke="#334257" stroke-width="2" />
                 <path stroke="#334257" stroke-linecap="round" stroke-width="2" d="m15 15-3-3" />
