--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <title>Сложная шапка сайта</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600;700&display=swap"
+    rel="stylesheet">
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/base.css">
@@ -45,15 +47,15 @@
         <div class="main-header__navigation">
           <nav>
             <ul>
-              <li><a href="#">Covid-19</a></li>
-              <li><a href="#">Услуги</a></li>
-              <li><a href="#">Врачи</a></li>
-              <li><a href="#">О нас</a></li>
-              <li><a href="#">Пациентам</a></li>
-              <li><a href="#">Расписание</a></li>
-              <li><a href="#">Цены</a></li>
-              <li><a href="#">Акции</a></li>
-              <li><a href="#">Филиалы</a></li>
+              <li><a class="main-header__menu-link" href="#">Covid-19</a></li>
+              <li><a class="main-header__menu-link" href="#">Услуги</a></li>
+              <li><a class="main-header__menu-link" href="#">Врачи</a></li>
+              <li><a class="main-header__menu-link" href="#">О нас</a></li>
+              <li><a class="main-header__menu-link" href="#">Пациентам</a></li>
+              <li><a class="main-header__menu-link" href="#">Расписание</a></li>
+              <li><a class="main-header__menu-link" href="#">Цены</a></li>
+              <li><a class="main-header__menu-link" href="#">Акции</a></li>
+              <li><a class="main-header__menu-link" href="#">Филиалы</a></li>
             </ul>
           </nav>
         </div>
