добавил центровщик в проект

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <header class="main-header">
-    <div class="main-header__wrapper">
+    <div class="main-header__wrapper wrapper">
       <div class="main-header__top">
 
         <div class="main-header__list">
